# apg

testapp/: CMakeLists.txt  Makefile-simple  cornell-spheres.nff  hdrloader.cpp  hdrloader.h  nffread.h  testapp.cpp
testapp/results/: desc.neon
testapp/sgl/: sgl.cpp
